[package]
name = "lispify"
version = "0.0.2"
authors = ["Aster <192607617@qq.com>"]
description = "Pretty print lisp"
repository = "https://github.com/ygg-lang/pex-lisp"
documentation = "https://docs.rs/lispify"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies.pretty-print]
version= "0.1.5"
path = 'C:\Users\Dell\CLionProjects\pretty-print\projects\pretty-print'

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
